<resources>
    <string name="app_name" translatable="false">ARS Connect</string>
    <string name="button_menu">Menu</string>
    <string name="temp_1">Hello World!</string>
    <string name="temp_2">Hello World 12121 11!</string>
    <string name="temp_03">Phases</string>
    <string name="temp_04">Osc</string>
    <string name="temp_05">power</string>
    <string name="main_menu_device">Dispositivo ARS</string>
    <string name="main_menu_device_disconnect">Disconnect</string>
    <string name="fragment_device_title">Establish connection with ARS</string>
    <string name="main_menu_device_connect">Quick connect</string>
    <string name="main_menu_device_configure">Configure</string>
    <string name="fragment_device_info_01">Associated to:</string>
    <string name="fragment_device_image_description">Image of ARS device</string>
    <string name="fragment_device_change_device">Change the associated ARS device.</string>
    <string name="fragment_device_qr">QR Code</string>
    <string name="fragment_device_manual">Manual</string>
    <string name="fragment_device_connect">Connect to device</string>
    <string name="fragment_device_disconnect">Disconnect the device</string>
    <string name="shared_prefs_default_device_id" translatable="false">ARS-B0B21C3342F8</string>
    <string name="fragment_device_info_02">Scan successful. Now you are connected to:</string>
    <string name="fragment_device_info_03">You scanned an invalid QR code.</string>
    <string name="fragment_device_info_04">Failed to scan QR Code</string>
    <string name="device_connection_manager_info01">Permissions required. Grant permissions to the app and try again.</string>
    <string name="password_wifi_key" translatable="false">/\'J2Cn5_sB>@qb#A</string>
    <string name="fragment_device_prefix_ssid" translatable="false">PCS-2.0-</string>
    <string name="main_activity_permissions_request">ARS requires the following permission.</string>
    <string name="general_ok">Ok</string>
    <string name="general_cancel">Cancel</string>
    <string name="main_activity_permissions_manual_request">You need to allow necessary permissions in Settings manually.</string>
    <string name="fragment_device_cancel_qr_scan">Cancel QR Scan</string>
    <string name="fragment_device_qr_scanning_for_change_device">Scan the QR code with product serial number to associate with another device.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>