<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/temp_1">
        <menu>
            <item
                android:id="@+id/link"
                android:enabled="true"
                android:icon="@drawable/baseline_electric_meter_24"
                android:title="@string/temp_1"/>
        </menu>
    </item>
    <item
        android:enabled="true"
        android:icon="@drawable/baseline_link_24"
        android:title="@string/temp_2"/>
    <item
        android:enabled="true"
        android:icon="@drawable/baseline_link_24"
        android:title="@string/temp_03"/>
    <item
        android:enabled="true"
        android:icon="@drawable/baseline_link_24"
        android:title="@string/temp_04"/>
    <item
        android:enabled="true"
        android:icon="@drawable/baseline_link_24"
        android:title="@string/temp_04"/>
    <item
        android:enabled="true"
        android:icon="@drawable/baseline_link_24"
        android:title="@string/temp_04"/>
    <item
        android:enabled="true"
        android:icon="@drawable/baseline_link_24"
        android:title="@string/temp_04"/>
    <item
        android:enabled="true"
        android:icon="@drawable/baseline_link_24"
        android:title="@string/temp_05"/>
</menu>